fixing media queries for statistics banner on mobile devices

--- a/src/components/StatsBanner/StatsBanner.scss
+++ b/src/components/StatsBanner/StatsBanner.scss
@@ -9,6 +9,9 @@
   @media screen and (max-width: 1024px) {
     padding: 0 50px 40px;
   }
+  @media screen and (max-width: 500px) {
+    padding: 0 20px 40px;
+  }
   &__content {
     padding: 24px 24px 24px 0;
     display: flex;
